minor, mostly package updates

--- a/src/styles/global-styles.less
+++ b/src/styles/global-styles.less
@@ -1,3 +1,4 @@
+// ** Main Layout ** //
 #page-wrapper{
 	display: grid;
 	grid-template-rows: @headerHeight @menuHeight auto @footerHeight;
@@ -14,10 +15,7 @@
 	grid-area: mainContent;
 	background-color:blue;
 }
-
-
-
-// ** End Main Layout Components ** //
+// ** End Main Layout ** //
 
 // ** Generic Tags ** //
 body{
